feat: Avoid to call backup intent when not available
A window.cozy.backup_available flag was sent by the flagship app but
not used. So errors were shown because intent were not available on
old flagship app version.

--- a/src/photos/locales/en.json
+++ b/src/photos/locales/en.json
@@ -308,6 +308,9 @@
       "description": "Backup automatically all your photos and videos from your mobile devices",
       "install": "Install our app"
     },
+    "UpdateAppAlert": {
+      "description": "Update your app to backup automatically all your photos and videos"
+    },
     "LastBackupStatus": {
       "lastBackup": "Last backup: ",
       "success": "Success - ",
