feat: Warn the user when the OnlyOffice file has been deleted during editing

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -746,5 +746,12 @@
       "cancel": "Cancel",
       "confirm": "Ok, I get it"
     }
+  },
+  "FileDeletedModal": {
+    "title": "Someone has deleted this file",
+    "content": "Someone has deleted this file while you were editing it. You can stop editing or restore the file to continue editing.",
+    "confirm": "Restore file",
+    "cancel": "Undo changes",
+    "error": "An error occurred, please try again."
   }
 }
