fix: Suggest to go to photos tab instead of albums tab in iOS after a backup
On iOS, a button was sending you to the albums tab after a backup. But if you had no album, which is possible, you saw nothing. So it is more safe to send to the photos tab (default tab).

--- a/src/photos/locales/en.json
+++ b/src/photos/locales/en.json
@@ -291,7 +291,7 @@
       "startBackup": "Backup",
       "backupInProgress": "Backup in progress %{alreadyBackupedCount} / %{totalCount}",
       "openInDrive": "Open in Drive",
-      "seeMyAlbums": "See my albums",
+      "viewMyPhotos": "View my saved photos",
       "saved": "Saved",
       "cancel": "Stop"
     },
