refactor: Change from destroyconfirmation to DestroyConfirm

--- a/src/drive/locales/ar.json
+++ b/src/drive/locales/ar.json
@@ -88,7 +88,7 @@
     "cancel": "إلغاء",
     "delete": "حذف الكل"
   },
-  "destroyconfirmation": {
+  "DestroyConfirm": {
     "cancel": "إلغاء"
   },
   "quotaalert": {
