--- a/src/drive/locales/it.json
+++ b/src/drive/locales/it.json
@@ -232,7 +232,7 @@
     "cancel": "Annulla",
     "delete": "Elimina tutto"
   },
-  "destroyconfirmation": {
+  "DestroyConfirm": {
     "title": "Eliminare permanentemente?",
     "cancel": "Annulla",
     "delete": "Elimina permanentemente"
