--- a/src/drive/locales/ja.json
+++ b/src/drive/locales/ja.json
@@ -231,7 +231,7 @@
     "cancel": "キャンセル",
     "delete": "すべて削除"
   },
-  "destroyconfirmation": {
+  "DestroyConfirm": {
     "title": "完全に削除しますか?",
     "forbidden": "このファイルにもうアクセスすることはできません。 |||| これらのファイルにもうアクセスすることはできません。",
     "restore": "バックアップを作成していない場合、このファイルを復元することはできません。 |||| バックアップを作成していない場合、これらのファイルを復元することはできません。",
