--- a/src/drive/locales/ru.json
+++ b/src/drive/locales/ru.json
@@ -194,7 +194,7 @@
     "cancel": "Отмена",
     "delete": "Удалить все"
   },
-  "destroyconfirmation": {
+  "DestroyConfirm": {
     "title": "Удалить полностью?",
     "cancel": "Отмена",
     "delete": "Удалить полностью"
