--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -278,8 +278,8 @@
     "cancel": "Cancel",
     "delete": "Delete all"
   },
-  "destroyconfirmation": {
-    "title": "Permanently delete?",
+  "DestroyConfirm": {
+    "title": "Permanently delete? |||| Delete X files?",
     "forbidden": "You won't be able to access this file anymore. |||| You won't be able to access these files anymore.",
     "restore": "You won't be able to restore this file if you didn't make a backup. |||| You won't be able to restore these files if you didn't make a backup.",
     "cancel": "Cancel",
