refactor: Change from deleteconfirmation translation key to DeleteConfirm

--- a/src/drive/locales/ar.json
+++ b/src/drive/locales/ar.json
@@ -80,7 +80,7 @@
     "restore": "إسترجاع",
     "close": "غلق"
   },
-  "deleteconfirmation": {
+  "DeleteConfirm": {
     "cancel": "إلغاء",
     "delete": "حذف"
   },
