--- a/src/drive/locales/it.json
+++ b/src/drive/locales/it.json
@@ -222,7 +222,7 @@
     "openWith": "Apri con...",
     "duplicate": "Duplica"
   },
-  "deleteconfirmation": {
+  "DeleteConfirm": {
     "cancel": "Annulla",
     "delete": "Rimuovi"
   },
