--- a/src/drive/locales/ja.json
+++ b/src/drive/locales/ja.json
@@ -216,7 +216,7 @@
     "qualify": "分類",
     "history": "履歴"
   },
-  "deleteconfirmation": {
+  "DeleteConfirm": {
     "title": "この要素を削除しますか? |||| これらの要素を削除しますか?",
     "trash": "ゴミ箱に移動されます。 |||| ゴミ箱に移動されます。",
     "restore": "いつでも元に戻すことができます。 |||| いつでも元に戻すことができます。",
